proxy-wasm/my-wasm-filter/envoy/envoy.yaml
admin:
  access_log_path: /dev/null
  profile_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 9000 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: echo
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: "my_wasm_filter"
                root_id: "my_wasm_filter"
                vm_config:
                  vm_id: my_wasm_filter
                  runtime: "envoy.wasm.runtime.v8"
                  code:
                    local:
                      filename: "/etc/my_wasm_filter.wasm"
          - name: envoy.router

  clusters:
  - name: echo
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: echo
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: echo, port_value: 5678 }
  - name: httpbin
    connect_timeout: 5s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: httpbin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: httpbin.org, port_value: 80 }
